--- a/client/checkout/rest.html
+++ b/client/checkout/rest.html
@@ -48,7 +48,7 @@
         }
 
         var client = {
-            sandbox:    'AQzwHJt9jZAyQbf-DnaqZefvbTCMammV7ZFsnW23thr9qUQX9RGMgSVbzRjxXTAODKjh2W0k6Ei4Q2m9'
+            sandbox:    'AVGigtRsEjPZdshjlvaiOJyVWu3OPrwwLNPwBcFi6FlgLw_RJbEEObWfkSkYwSe4FS1oba12dCRqFDyr'
         };
 
         var environment = 'sandbox';
@@ -107,7 +107,7 @@
             payment: payment,
             onAuthorize: onAuthorize,
             commit: true,
-            tyle: {
+            style: {
                 size: "medium",
                 color: "blue",
                 shape: "rect"
