--- a/client/checkout/classic.html
+++ b/client/checkout/classic.html
@@ -79,7 +79,11 @@
                 // Return the response from the function call
             return paypal.request.get('/paypal/classic/setexpresscheckout')
                 .then(function(data){
-                    return data.TOKEN;
+                    if (data.error) {
+                        throw data.error;
+                    } else {
+                        return data.TOKEN;
+                    }
                 });
 
 
