customize to my own settings and testing values

--- a/client/checkout/rest-confirm.html
+++ b/client/checkout/rest-confirm.html
@@ -17,8 +17,8 @@
                 transactions: [
                     {
                         amount: {
-                            total:    '1.00',
-                            currency: 'USD'
+                            total:    '10.00',
+                            currency: 'EUR'
                         }
                     }
                 ]
@@ -54,7 +54,7 @@
         }
 
         var client = {
-            sandbox:    'AUHzD2_J2B8qwU1AewKFMGuXk0sg7sNcRT6jwHPLU3lpl6ZjG2rpXg58-DiaSMRunnt0qfBCcLqkn4L4'
+            sandbox:    'AVGigtRsEjPZdshjlvaiOJyVWu3OPrwwLNPwBcFi6FlgLw_RJbEEObWfkSkYwSe4FS1oba12dCRqFDyr'
         };
 
         function prepopulate(data) {
