--- a/client/checkout/rest.html
+++ b/client/checkout/rest.html
@@ -56,8 +56,8 @@
             transactions: [
                 {
                     amount: {
-                        total:    '1.00',
-                        currency: 'USD'
+                        total:    '10.00',
+                        currency: 'EUR'
                     }
                 }
             ]
