full rest transaction example with payment experience

--- a/client/checkout/classic.html
+++ b/client/checkout/classic.html
@@ -177,7 +177,7 @@
             </div>
             <div class="form-group">
                 <label for="amount">Amount</label>
-                <input type="hidden" class="form-control" id="amt" placeholder="amt" name="amt">
+                <input type="text" class="form-control" id="amt" placeholder="amt" name="amt" disabled>
             </div>
             
             <button id="submitButton" type="submit" class="btn btn-default">Place Order</button>
