--- a/client/checkout/rest.html
+++ b/client/checkout/rest.html
@@ -48,11 +48,11 @@
             showDom('paypal-end');
         }
 
-        var client = {
+        let client = {
             sandbox: 'AVGigtRsEjPZdshjlvaiOJyVWu3OPrwwLNPwBcFi6FlgLw_RJbEEObWfkSkYwSe4FS1oba12dCRqFDyr'
         };
 
-        var environment = 'sandbox';
+        let environment = 'sandbox';
         // var transaction = {
         //     transactions: [
         //         {
@@ -63,7 +63,8 @@
         //         }
         //     ]
         // };
-        var transaction = {
+
+        let transaction = {
             "redirect_urls": {
                 "return_url": "http://www.paypal.com/return",
                 "cancel_url": "http://www.paypal.com/cancel"
@@ -99,8 +100,7 @@
                             }
                         ]
                     },
-                    "description": "The payment transaction description.",
-                    "invoice_number": "99232-invoice_id"
+                    "description": "The payment transaction description."
                 }
             ],
             "intent": "sale",
@@ -142,6 +142,50 @@
             // END PART 1
         }
 
+        function updateShippingInfo(data, actions) {
+        
+            const price = 15.00;
+
+            function patchShippingCost(amount) {
+                const parsed_price = parseFloat(price);
+                const parsed_shipping = parseFloat(amount);
+                const final_total = (parsed_price + parsed_shipping).toString();
+
+                return actions.payment.patch([
+                    {
+                        op: 'replace',
+                        path: '/transactions/0/amount',
+                        value: {
+                            total: final_total,
+                            currency: 'USD',
+                            details: {
+                                subtotal: price,
+                                shipping: amount
+                            }
+                        }
+                    }
+                ]);
+            }
+
+            let shipping_amount = 0.00;
+            if (data.country !=="US") {
+                return actions.reject();
+            }
+
+            if (data.state != "CA") {
+                shipping_amount = 5.00;
+                return patchShippingCost(shipping_amount);
+            } else {
+                const shipping = data.amounts.shipping;
+
+                if(shipping && shipping.amount && parseFloat(shippiong.amount)!=0) {
+                    return patchShippingCost(shipping_amount);
+                }
+
+                return actions.resolve();
+            }
+        }
+
         function onAuthorize(data, actions) {
             // PART 3: Complete the onAuthorize callback
             // Use the information passed to this function to execute the payment.
@@ -172,12 +216,16 @@
             onError: onError,
             onCancel: onCancel,
             payment: payment,
+            onShippingChange: updateShippingInfo,
             onAuthorize: onAuthorize,
             commit: true,
             style: {
                 size: "medium",
                 color: "blue",
                 shape: "rect"
+            },
+            funding: {
+                disallowed: [ paypal.FUNDING.CREDIT ]
             }
         }, '#paypal-button');
 
