update to get the amount according to the transaction

--- a/client/checkout/rest.html
+++ b/client/checkout/rest.html
@@ -143,8 +143,8 @@
         }
 
         function updateShippingInfo(data, actions) {
-        
-            const price = 15.00;
+            
+            const price = transaction.transactions[0].amount.total;
 
             function patchShippingCost(amount) {
                 const parsed_price = parseFloat(price);
