we have opiton to use application experience too, beside create web profile separately.

--- a/client/checkout/rest.html
+++ b/client/checkout/rest.html
@@ -69,7 +69,10 @@
                 "return_url": "http://www.paypal.com/return",
                 "cancel_url": "http://www.paypal.com/cancel"
             },
-            "experience_profile_id": "XP-QEMZ-CEC8-7G8G-8FAD",
+            // "experience_profile_id": "XP-QEMZ-CEC8-7G8G-8FAD",
+            'application_context': {
+                'landing_page': 'Billing'
+            },
             "transactions": [
                 {
                     "amount": {
