payment SDK + NVP

--- a/client/checkout/index.html
+++ b/client/checkout/index.html
@@ -13,7 +13,8 @@
           <li class="list-group-item"><a href="rest.html">REST</a></li>
           <li class="list-group-item"><a href="rest-confirm.html">REST - Confirm</a></li>
           <li class="list-group-item"><a href="classic.html">Classic</a></li>
-          <li class="list-group-item"><a href="classic-redirect.html">Classic-Redirect</a></li>
+          <li class="list-group-item"><a href="classic-redirect.html">Classic Redirect</a></li>
+          <li class="list-group-item"><a href="classic-and-sdk.html">Classic and SDK</a></li>
           <li class="list-group-item"><a href="multiple-buttons.html">Multiple Buttons</a></li>
           <li class="list-group-item"><a href="nsf.html">Funding Recovery</a></li>
           <li class="list-group-item"><a href="braintree.html">Braintree Integration</a></li>
