--- a/client/checkout/classic-and-sdk.html
+++ b/client/checkout/classic-and-sdk.html
@@ -82,6 +82,7 @@
                     if (res.error) {
                         throw res.error;
                     } else {
+                        console.log(res);
                         return res.TOKEN;
                     }
                 });
