--- a/client/checkout/classic-and-sdk.html
+++ b/client/checkout/classic-and-sdk.html
@@ -82,7 +82,7 @@
                     if (res.error) {
                         throw res.error;
                     } else {
-                        console.log(res);
+                        console.log("Receive ...................set up payment: ", res);
                         return res.TOKEN;
                     }
                 });
