fix using native Promise.all instead of paypal.promise.call which was removed

--- a/client/checkout/classic-and-sdk.html
+++ b/client/checkout/classic-and-sdk.html
@@ -49,7 +49,7 @@
         }
 
         function onAuthorize(data, actions) {
-            return paypal.Promise.all([ 
+            return Promise.all([ 
                 getExpressCheckout(data, actions), 
                 setupExecute(data, actions)
             //    doExpressCheckout(data, actions)
