fix payment action

--- a/client/checkout/classic-and-sdk.html
+++ b/client/checkout/classic-and-sdk.html
@@ -111,7 +111,7 @@
                 PAYERID: data.payerID,
                 AMT: document.getElementById('amt').value,
                 //AMT: '50',
-                PAYMENTACTION: data.intent
+                PAYMENTACTION: "Sale"
             };
 
             // PART 3: Complete doExpressCheckout function
