commit set to false

--- a/client/checkout/classic-and-sdk.html
+++ b/client/checkout/classic-and-sdk.html
@@ -9,7 +9,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- PayPal Script -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AZghgyLxWIW4Lh3XhVXBNl34yG5gm7y7pTgeDnCl8gsaN7PjxsTxeEGzDCGff9h_9sp7S3pyxFViFTdB&debug=true&commit=true" data-version-4></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AZghgyLxWIW4Lh3XhVXBNl34yG5gm7y7pTgeDnCl8gsaN7PjxsTxeEGzDCGff9h_9sp7S3pyxFViFTdB&debug=true&commit=false" data-version-4></script>
 
     <script>
         // Exercise Setup
